# Inharmonic

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  inharmonic.rpp
.github/workflows/: build.yml
VST3 Presets/mogesystem/Inharmonic/: AirSaw.vstpreset  BellCrackle.vstpreset  Belly.vstpreset  BowedPad.vstpreset  BronzeHorn.vstpreset  ChapelPad.vstpreset  CircuitBend.vstpreset  HangTube.vstpreset  IcedTemple.vstpreset  MutedPipeHit.vstpreset  Pianosynth.vstpreset  Pianosynth2.vstpreset  Pizzican.vstpreset  SawFilter.vstpreset  SlowGlass.vstpreset  SteelChord.vstpreset  SubBass.vstpreset  TimpaniConcrete.vstpreset  VibratoLead.vstpreset  WeirdMuseum.vstpreset
resource/: editor.uidesc
source/: cids.h  controller.cpp  controller.h  entry.cpp  parameters.h  processor.cpp  processor.h  version.h
source/dsp/: effect.h  inharmonic.h
